<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayoutid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondolista"
    tools:context=".VentanaRegistro">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="112dp"
                android:layout_height="109dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logoapp"
                android:src="@mipmap/icono_round"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.085" />

            <EditText
                android:id="@+id/editTextNombreRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/nombre_completo"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/usuario"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spinnerSexo"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:entries="@array/spinnerSexo"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextTelefonoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/telefono"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextCorreoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/correo"
                android:minHeight="48dp"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#e63946"
                android:gravity="center"
                android:text="@string/Registro"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>